<resources>
    <string name="app_name">Lista de Autos</string>
    <string name="modificarTitle">Editar Auto</string>
    <string name="editar">Editar</string>
    <string name="modelo">modelo</string>
    <string name="marca">marca</string>
    <string name="tvMarca">Marca del auto</string>
    <string name="tvModelo">Modelo del auto</string>
    <string name="tvAnio">Año</string>
    <string-array name="años">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
</resources>